--- a/index.css
+++ b/index.css
@@ -406,7 +406,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./images/header.jpg');
+        url('./images/header6.jpeg');
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -425,6 +425,7 @@ body:not(.user-is-tabbing) a:focus {
     max-width: var(--container-medium-width);
     font-family: 'Jost', sans-serif;
     font-size: var(--font-size-medium);
+  
 }
 
 @media(max-width: 500px) {
